Starting to design UI for the Rock-Paper-Scissors Project

--- a/rock_paper_scissors.html
+++ b/rock_paper_scissors.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="rock_paper_scissors.css">
 </head>
-<body>
+<body id="body">
+    <div id="gameboard">
+        <h1 id="pick_text"> Pick your weapon!</h1>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div id="images">
+            <img id="rock" src=".img/noun_rock_88661.png" />
+            <img id="paper" src=".img/noun_Paper_88662.png" />
+            <img id="scissors" src=".img/noun_Scissors_88666.png" />
+        </div>
+
+    </div>
+    
     <script type="text/javascript" src="rock_paper_scissors.js">
     </script>
 </body>
