new branch for results display and DOM methods

--- a/rock_paper_scissors.html
+++ b/rock_paper_scissors.html
@@ -38,10 +38,10 @@
 
         <div id="round-winner">
 
-            <h2> Winner is: </h2>
-            <input type="text" id="winner-input" value="" autocomplete="off" readonly/>
-            <h2> WHO BEATS WHO: </h2>
-            <input type="text" id="who-beats-who" value="" autocomplete="off" readonly/>
+            <h2> Result: </h2>
+            <input type="text" id="result-input" value="" autocomplete="off" readonly/>
+            <h2> Battle log: </h2>
+            <input type="text" id="battle-log" value="" autocomplete="off" readonly/>
 
         </div>
 
